--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>panda-commerce-bootstrap</title>
     <!-- bootstrap css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- custom css  -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- header start -->
@@ -42,14 +45,14 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                  <div class="row bg-info bg-gradient rounded-3 d-flex align-items-center p-5">
+                  <div class="row panda-bg bg-gradient rounded-3 d-flex align-items-center p-5">
                       <div class="col-lg-7">
                         <h1>Cool Dude Headphone</h1>
                         <p>
                             This is the best headphone iin the world for people who just want to waste time in front of funky world
                         </p>
                         <h1>$420</h1>
-                        <button class="btn btn-warning">Buy Now</button>
+                        <button class="btn panda-btn">Buy Now</button>
                       </div>
                       <div class="col-lg-5">
                         <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -57,14 +60,14 @@
                   </div> 
               </div>
               <div class="carousel-item">
-                <div class="row bg-info bg-gradient rounded-3 d-flex align-items-center p-5">
+                <div class="row panda-bg bg-gradient rounded-3 d-flex align-items-center p-5">
                     <div class="col-lg-7">
                       <h1>Mega LCD TV For Sports</h1>
                       <p>
                           This is the best tv in the world for people who just want to waste time in front of tv.
                       </p>
                       <h1>$1220</h1>
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="btn panda-btn">Buy Now</button>
                     </div>
                     <div class="col-lg-5">
                       <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -72,14 +75,14 @@
                 </div> 
               </div>
               <div class="carousel-item">
-                <div class="row bg-info bg-gradient rounded-3 d-flex align-items-center p-5">
+                <div class="row panda-bg bg-gradient rounded-3 d-flex align-items-center p-5">
                     <div class="col-lg-7">
                       <h1>X-BOX for your living room</h1>
                       <p>
                           This is the best x-box in the world for people who just want to waste time in front in front of funky world
                       </p>
                       <h1>$600</h1>
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="btn panda-btn">Buy Now</button>
                     </div>
                     <div class="col-lg-5">
                       <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -101,7 +104,7 @@
    <!-- main start -->
    <main>
        <!-- catagories -->
-    <section class="container my-5">
+    <section class="container my-5 catagories">
             <div class="row g-4">
               <div class="col-lg-4 col-md-6 col-12">
                 <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -134,7 +137,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy now</button>
+              <button class="btn panda-btn">Buy now</button>
             </div>
           </div>
         </div>
@@ -146,7 +149,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy now</button>
+              <button class="btn panda-btn">Buy now</button>
             </div>
           </div>
         </div>
@@ -158,7 +161,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy now</button>
+              <button class="btn panda-btn">Buy now</button>
             </div>
           </div>
         </div>
@@ -176,7 +179,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy now</button>
+              <button class="btn panda-btn">Buy now</button>
             </div>
           </div>
         </div>
@@ -188,7 +191,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy now</button>
+              <button class="btn panda-btn">Buy now</button>
             </div>
           </div>
         </div>
@@ -200,20 +203,20 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy now</button>
+              <button class="btn panda-btn">Buy now</button>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- subscribe -->
-    <section class="container d-flex justify-content-center bg-info align-items-center mt-5" style="height: 300px;" id="subs">
+    <section class="container d-flex justify-content-center panda-bg align-items-center mt-5" style="height: 300px;" id="subs">
       <div>
         <h1>LET'S STAY IN TOUCH</h1>
       <p>Get updates on sales, specials and more</p>
-      <input type="text" placeholder="enter your email">
+      <input type="text" placeholder="enter your email" class="form-control">
       <br>
-      <button class="btn btn-warning">submit</button>
+      <button class="btn panda-btn">submit</button>
       </div>
       
     </section>
